--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ serde_json = "1.0.39"
 serde_derive = "1.0.89"
 serde = "1.0.89"
 rlua = "0.16.2"
+stream-cancel = "0.4.4"
+tokio-signal = "0.2.7"
 
 [build-dependencies]
 protobuf-codegen-pure = "2.3.0"
