--- a/hyperion/Cargo.toml
+++ b/hyperion/Cargo.toml
@@ -18,6 +18,7 @@ serde_derive = "1.0.89"
 serde_json = "1.0.39"
 tokio = "0.1.16"
 tokio-codec = "0.1.1"
+stream-cancel = "0.4.4"
 
 [build-dependencies]
 protobuf-codegen-pure = "2.3.0"
