--- a/hyperion/Cargo.toml
+++ b/hyperion/Cargo.toml
@@ -18,6 +18,7 @@ serde_derive = "1.0.90"
 serde_json = "1.0.39"
 tokio = "0.1.19"
 stream-cancel = "0.4.4"
+regex = "1.1.6"
 
 [build-dependencies]
 protobuf-codegen-pure = "2.5.0"
