--- a/hyperion/Cargo.toml
+++ b/hyperion/Cargo.toml
@@ -3,6 +3,7 @@ name = "hyperion"
 version = "0.1.0"
 authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
 edition = "2018"
+build = "build.rs"
 
 [dependencies]
 byteorder = "1.3.1"
@@ -11,7 +12,6 @@ failure = "0.1.5"
 futures = "0.1.26"
 log = "0.4.6"
 palette = "0.4.1"
-protobuf = "2.5.0"
 rlua = "0.16.2"
 serde = "1.0.90"
 serde_derive = "1.0.90"
@@ -20,6 +20,7 @@ tokio = "0.1.19"
 stream-cancel = "0.4.4"
 regex = "1.1.6"
 base64 = "0.10.1"
+prost = "0.5.0"
 
 [build-dependencies]
-protobuf-codegen-pure = "2.5.0"
+prost-build = "0.5.0"
