--- a/hyperion/Cargo.toml
+++ b/hyperion/Cargo.toml
@@ -21,6 +21,7 @@ stream-cancel = "0.4.4"
 regex = "1.1.6"
 base64 = "0.10.1"
 prost = "0.5.0"
+serde_yaml = "0.8.9"
 
 [build-dependencies]
 prost-build = "0.5.0"
