--- a/hyperiond/Cargo.toml
+++ b/hyperiond/Cargo.toml
@@ -14,5 +14,5 @@ log = "0.4.6"
 pretty_env_logger = "0.3.0"
 tokio = "0.1.19"
 tokio-signal = "0.2.7"
-serde_json = "1.0.39"
 regex = "1.1.6"
+serde_yaml = "0.8.9"
