--- a/hyperiond/Cargo.toml
+++ b/hyperiond/Cargo.toml
@@ -11,11 +11,11 @@ futures = "0.1.27"
 stream-cancel = "0.4.4"
 hyperion = { path = "../hyperion" }
 log = "0.4.6"
-pretty_env_logger = "0.3.0"
 tokio = "0.1.20"
 tokio-signal = "0.2.7"
 regex = "1.1.6"
 serde_yaml = "0.8.9"
+env_logger = "0.6.1"
 
 piston_window = { version = "0.93.0", optional = true }
 image = { version = "0.21.1", optional = true }
