--- a/hyperion/Cargo.toml
+++ b/hyperion/Cargo.toml
@@ -22,6 +22,7 @@ regex = "1.1.6"
 base64 = "0.10.1"
 prost = "0.5.0"
 serde_yaml = "0.8.9"
+humantime = "1.2.0"
 
 [build-dependencies]
 prost-build = "0.5.0"
