--- a/hyperion/Cargo.toml
+++ b/hyperion/Cargo.toml
@@ -23,6 +23,7 @@ base64 = "0.10.1"
 prost = "0.5.0"
 serde_yaml = "0.8.9"
 humantime = "1.2.0"
+circular-queue = "0.2.0"
 
 [build-dependencies]
 prost-build = "0.5.0"
