--- a/hyperion/Cargo.toml
+++ b/hyperion/Cargo.toml
@@ -24,6 +24,7 @@ prost = "0.5.0"
 serde_yaml = "0.8.9"
 humantime = "1.2.0"
 circular-queue = "0.2.0"
+approx = "0.1.1"
 
 [build-dependencies]
 prost-build = "0.5.0"
