--- a/Makefile.toml
+++ b/Makefile.toml
@@ -9,7 +9,7 @@ args = [
   "--xform=s|target/release|bin|",
   "--show-transformed",
   "-czvf",
-  "hyperion.rs-release.tar.gz",
+  "hyperion.rs_${CARGO_MAKE_RUST_TARGET_ARCH}-${CARGO_MAKE_RUST_TARGET_ENV}-${CARGO_MAKE_RUST_TARGET_OS}.tar.gz",
   "target/release/hyperiond",
   "scripts",
 ]
