--- a/hyperion/Cargo.toml
+++ b/hyperion/Cargo.toml
@@ -25,6 +25,7 @@ serde_yaml = "0.8.9"
 humantime = "1.2.0"
 circular-queue = "0.2.0"
 approx = "0.1.1"
+num-traits = "0.2.8"
 
 [build-dependencies]
 prost-build = "0.5.0"
