--- a/hyperion/Cargo.toml
+++ b/hyperion/Cargo.toml
@@ -18,7 +18,7 @@ serde_derive = "1.0.97"
 serde_json = "1.0.40"
 tokio = "0.1.22"
 stream-cancel = "0.4.4"
-regex = "1.2.0"
+regex = "1.2.1"
 base64 = "0.10.1"
 prost = "0.5.0"
 serde_yaml = "0.8.9"
@@ -30,6 +30,9 @@ hyper = "0.12.33"
 hyper-staticfile = "0.4.0"
 reset-router = "0.6.5"
 hostname = "0.1.5"
+validator = "0.9.0"
+validator_derive = "0.9.0"
+lazy_static = "1.3.0"
 
 [build-dependencies]
 prost-build = "0.5.0"
