--- a/hyperion/Cargo.toml
+++ b/hyperion/Cargo.toml
@@ -28,7 +28,7 @@ approx = "0.1.1"
 num-traits = "0.2.8"
 hyper = "0.12.33"
 hyper-staticfile = "0.4.1"
-reset-router = "0.6.5"
+reset-router = { version = "0.6.5", git = "https://github.com/vtavernier/reset-router.git", branch = "feature/parts-extensions" }
 hostname = "0.1.5"
 validator = "0.9.0"
 validator_derive = "0.9.0"
