--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.22",
+    "@fortawesome/free-solid-svg-icons": "^5.10.2",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
     "axios": "^0.19.0",
     "buefy": "^0.8.2",
     "es6-promise": "^4.2.8",
