--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "es6-promise": "^4.2.8",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vuelidate": "^0.7.4",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
