--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.19.0",
     "buefy": "^0.8.2",
     "es6-promise": "^4.2.8",
+    "lodash": "^4.17.15",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuelidate": "^0.7.4",
