--- a/Makefile.toml
+++ b/Makefile.toml
@@ -13,11 +13,23 @@ args = [
   "hyperion.rs_${CARGO_MAKE_RUST_TARGET_ARCH}-${CARGO_MAKE_RUST_TARGET_ENV}-${CARGO_MAKE_RUST_TARGET_OS}.tar.gz",
   "target/release/hyperiond",
   "scripts",
+  "web/dist",
+]
+
+[tasks.build-web]
+script = [
+  "cd web ; if hash yarn 2>/dev/null; then export YARN=$(which yarn); elif hash yarnpkg 2>/dev/null; then export YARN=$(which yarnpkg); fi ; $YARN install ; $YARN run build",
+]
+
+[tasks.default-ci-flow]
+dependencies = [
+  "workspace-ci-flow",
+  "build-web",
 ]
 
 [tasks.package-ci-flow]
 dependencies = [
-  "workspace-ci-flow",
+  "default-ci-flow",
   "package-release",
 ]
 
