--- a/hyperion/Cargo.toml
+++ b/hyperion/Cargo.toml
@@ -33,6 +33,7 @@ validator = "0.9.0"
 validator_derive = "0.9.0"
 lazy_static = "1.3.0"
 bitflags = "1.1.0"
+pyo3 = "0.8.0"
 
 [build-dependencies]
 prost-build = "0.5.0"
