--- a/hyperion/Cargo.toml
+++ b/hyperion/Cargo.toml
@@ -8,7 +8,6 @@ build = "build.rs"
 [dependencies]
 byteorder = "1.3.2"
 bytes = "0.4.12"
-failure = "0.1.5"
 futures = "0.1.28"
 log = "0.4.7"
 palette = "0.4.1"
@@ -34,6 +33,7 @@ validator_derive = "0.9.0"
 lazy_static = "1.3.0"
 bitflags = "1.1.0"
 pyo3 = "0.8.0"
+error-chain = "0.12.1"
 
 [build-dependencies]
 prost-build = "0.5.0"
