--- a/hyperion/Cargo.toml
+++ b/hyperion/Cargo.toml
@@ -34,6 +34,7 @@ lazy_static = "1.3.0"
 bitflags = "1.1.0"
 pyo3 = "0.8.0"
 error-chain = "0.12.1"
+websocket = "0.23.0"
 
 [build-dependencies]
 prost-build = "0.5.0"
