--- a/hyperion/Cargo.toml
+++ b/hyperion/Cargo.toml
@@ -35,6 +35,7 @@ bitflags = "1.2.0"
 pyo3 = "0.8.0"
 error-chain = "0.12.1"
 websocket = "0.23.0"
+atomicwrites = "0.2.4"
 
 [build-dependencies]
 prost-build = "0.5.0"
