--- a/hyperiond/Cargo.toml
+++ b/hyperiond/Cargo.toml
@@ -1,17 +1,13 @@
 [package]
 name = "hyperiond"
-version = "0.1.1"
+version = "0.2.0"
 authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-clap = { version = "2.33.0", features = ["yaml"] }
-futures = "0.1.29"
-stream-cancel = "0.4.4"
 hyperion = { path = "../hyperion" }
-log = "0.4.8"
-tokio = "0.1.22"
-tokio-signal = "0.2.7"
-env_logger = "0.7.1"
-exitcode = "1.1.2"
+
+tokio = { version = "0.2.4", features = ["macros"] }
 error-chain = "0.12.1"
+env_logger = "0.7.1"
+structopt = "0.3.5"
