--- a/hyperiond/Cargo.toml
+++ b/hyperiond/Cargo.toml
@@ -10,4 +10,5 @@ hyperion = { path = "../hyperion" }
 tokio = { version = "0.2.4", features = ["macros"] }
 error-chain = "0.12.1"
 env_logger = "0.7.1"
-structopt = "0.3.5"
+structopt = { version = "0.3.5", features = ["paw"] }
+paw = "1.0.0"
