--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,49 @@
-[workspace]
-members = [
-    "hyperion",
-    "hyperionc-udp",
-    "hyperiond",
-]
+[package]
+name = "hyperion"
+version = "0.2.0"
+authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
+edition = "2018"
+build = "build.rs"
+description = "Rust implementation of the Hyperion open-source ambient lighting software"
+
+[dependencies]
+approx = "0.3.2"
+async-trait = "0.1.21"
+atomicwrites = "0.2.5"
+base64 = "0.11.0"
+bytes = "0.5.3"
+circular-queue = "0.2.2"
+error-chain = "0.12.1"
+futures = "0.3.1"
+futures-util = "0.3.1"
+hostname = "0.2.0"
+humantime = "1.3.0"
+lazy_static = "1.4.0"
+palette = "0.5.0"
+prost = { version = "0.5.0", git = "https://github.com/dingelish/prost.git" }
+pyo3 = "0.8.4"
+regex = "1.3.1"
+serde = "1.0.104"
+serde_derive = "1.0.104"
+serde_json = "1.0.44"
+serde_yaml = "0.8.11"
+# macros feature for main binary
+tokio = { version = "0.2.6", features = [ "blocking", "rt-core", "rt-threaded", "tcp", "sync", "stream", "time", "udp" ] }
+tokio-tungstenite = { version = "0.10.0", git = "https://github.com/dbcfd/tokio-tungstenite.git", branch = "tokio2" }
+tokio-util = { version = "0.2.0", features = [ "codec" ] }
+url = { version = "2.1.0", features = [ "serde" ] }
+validator = "0.10.0"
+validator_derive = "0.10.0"
+log = "0.4.8"
+
+# main binary dependencies
+env_logger = "0.7.1"
+structopt = { version = "0.3.5", features = ["paw"] }
+paw = "1.0.0"
+
+# udp-client dependencies
+csv = "1.1.1"
+ctrlc = "3.1.3"
+
+[build-dependencies]
+prost-build = "0.5.0"
