--- a/Makefile.toml
+++ b/Makefile.toml
@@ -11,7 +11,7 @@ args = [
   "--show-transformed",
   "-czvf",
   "hyperion.rs_${CARGO_MAKE_RUST_TARGET_ARCH}-${CARGO_MAKE_RUST_TARGET_ENV}-${CARGO_MAKE_RUST_TARGET_OS}.tar.gz",
-  "target/release/hyperiond",
+  "target/release/hyperion",
   "effects",
   "web/dist",
 ]
