--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ serde_derive = "1.0.104"
 serde_json = "1.0.44"
 serde_yaml = "0.8.11"
 # macros feature for main binary
-tokio = { version = "0.2.6", features = [ "blocking", "rt-core", "rt-threaded", "tcp", "sync", "stream", "time", "udp" ] }
+tokio = { version = "0.2.6", features = [ "blocking", "macros", "rt-core", "rt-threaded", "tcp", "sync", "stream", "time", "udp" ] }
 tokio-tungstenite = { version = "0.10.0", git = "https://github.com/dbcfd/tokio-tungstenite.git", branch = "tokio2" }
 tokio-util = { version = "0.2.0", features = [ "codec" ] }
 url = { version = "2.1.0", features = [ "serde" ] }
