--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 base64 = "0.13"
+byteorder = "1.4"
 bytes = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 color-eyre = "0.5"
@@ -17,7 +18,7 @@ futures-io = "0.3"
 log = "0.4"
 palette = { version = "0.5", features = ["serializing"] }
 paw = "1.0"
-protobuf = "2.20"
+prost = "0.7"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
@@ -30,4 +31,4 @@ tokio-util = { version = "0.6", features = ["codec"] }
 uuid = { version = "0.8", features = ["serde"] }
 
 [build-dependencies]
-protobuf-codegen-pure = "2.20"
+prost-build = "0.7.0"
