--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,12 @@ color-eyre = "0.5"
 diesel = { version = "1.4", features = ["sqlite"] }
 dirs = "3.0"
 env_logger = "0.8"
+flatbuffers = "0.8"
 futures = "0.3"
 futures-io = "0.3"
 log = "0.4"
 palette = { version = "0.5", features = ["serializing"] }
+parse-display = "0.4"
 paw = "1.0"
 prost = "0.7"
 serde = "1.0"
