--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ env_logger = "0.8"
 flatbuffers = "0.8"
 futures = "0.3"
 futures-io = "0.3"
+git-version = "0.3"
+hostname = "0.3"
 log = "0.4"
 palette = { version = "0.5", features = ["serializing"] }
 parse-display = "0.4"
