--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ name = "hyperiond"
 path = "src/main.rs"
 
 [dependencies]
+ambassador = "0.2"
+async-trait = "0.1"
 base64 = "0.13"
 byteorder = "1.4"
 bytes = "1.0"
