--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ prost = "0.7"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+spidev = "0.4"
 structopt = { version = "0.3", features = ["paw"] }
 strum = "0.20"
 strum_macros = "0.20"
