--- a/Cross.toml
+++ b/Cross.toml
@@ -1,2 +1,5 @@
+[target.x86_64-unknown-linux-gnu]
+image = "vtavernier/cross-hyperion:x86_64-unknown-linux-gnu"
+
 [target.arm-unknown-linux-gnueabihf]
-image = "vtavernier/hyperion.rs:arm-unknown-linux-gnueabihf"
+image = "vtavernier/cross-hyperion:arm-unknown-linux-gnueabihf"
