ci: Configure caching

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,6 +13,16 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v2
 
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo
+            target
+          key: ${{ runner.os }}-docs-${{ hashFiles('Cargo.lock', 'rust-toolchain') }}
+          restore-keys: |
+            ${{ runner.os }}-docs-${{ hashFiles('Cargo.lock', 'rust-toolchain') }}
+            ${{ runner.os }}-docs-
+
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
