--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,6 @@ byteorder = "1.4"
 bytes = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 color-eyre = "0.5"
-diesel = { version = "1.4", features = ["sqlite"] }
 dirs = "3.0"
 env_logger = "0.8"
 flatbuffers = "0.8"
@@ -36,6 +35,7 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 spidev = "0.4"
+sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-native-tls"] }
 structopt = { version = "0.3", features = ["paw"] }
 strum = "0.20"
 strum_macros = "0.20"
