--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,7 +57,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: 'release/*.tar.*'
+          file: 'release/*'
           file_glob: true
           tag: ${{ github.ref }}
           overwrite: true
