--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 spidev = "0.4"
-sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-native-tls"] }
+sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-rustls"] }
 structopt = { version = "0.3", features = ["paw"] }
 strum = "0.20"
 strum_macros = "0.20"
