--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,6 +79,6 @@ jobs:
           prerelease: true
           title: "Development Build"
           files: |
-            release/*
+            release/**/*
 
 # vim: ts=2:sw=2
