--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,15 +25,18 @@ futures-io = "0.3"
 git-version = "0.3"
 hostname = "0.3"
 image = "0.23"
+lazy_static = "1.4.0"
 log = "0.4"
 num_cpus = "1.13"
 palette = { version = "0.5", features = ["serializing"] }
 parse-display = "0.4"
 paw = "1.0"
 prost = "0.7"
+regex = "1.5"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+slotmap = "1.0"
 spidev = "0.4"
 sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-rustls"] }
 structopt = { version = "0.3", features = ["paw"] }
