--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,8 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v2
+        with:
+          submodules: true
 
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
