--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,10 +40,6 @@ jobs:
           target: ${{ matrix.target }}
           profile: minimal
 
-      - name: Build Docker image for cross
-        working-directory: docker
-        run: docker build . -f Dockerfile.${{ matrix.target }} -t vtavernier/cross-hyperion:${{ matrix.target }}
-
       - name: Build project
         uses: actions-rs/cargo@v1
         with:
@@ -52,7 +48,7 @@ jobs:
           args: --release --target=${{ matrix.target }}
 
       - name: Strip resulting binary
-        run: docker run -v ${{ github.workspace }}:/src vtavernier/cross-hyperion:${{ matrix.target }} ${{ matrix.cross }}strip /src/target/${{ matrix.target }}/release/hyperiond
+        run: docker run -v ${{ github.workspace }}:/src rustembedded/cross:${{ matrix.target }} ${{ matrix.cross }}strip /src/target/${{ matrix.target }}/release/hyperiond
 
       - name: Prepare release
         run: |
