--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,6 @@ bytes = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 color-eyre = "0.5"
 dirs = "3.0"
-env_logger = "0.8"
 flatbuffers = "2.0"
 futures = "0.3"
 futures-io = "0.3"
@@ -31,7 +30,6 @@ hex = { version = "0.4", features = ["serde"] }
 hostname = "0.3"
 image = { version = "0.23", default-features = false, features = ["png"] }
 lazy_static = "1.4"
-log = "0.4"
 num_cpus = "1.13"
 palette = { version = "0.5", features = ["serializing"] }
 parse-display = "0.5"
@@ -50,6 +48,9 @@ strum_macros = "0.21"
 thiserror = "1.0"
 tokio = { version = "1.8", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
 tokio-util = { version = "0.6", features = ["codec"] }
+tracing = "0.1"
+tracing-error = "0.1"
+tracing-subscriber = "0.2"
 uuid = { version = "0.8", features = ["serde"] }
 validator = { version = "0.14", features = ["derive"] }
 
