--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ strum_macros = "0.21"
 thiserror = "1.0"
 tokio = { version = "1.8", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
 tokio-util = { version = "0.6", features = ["codec"] }
+toml = "0.5"
 tracing = "0.1"
 tracing-error = "0.1"
 tracing-subscriber = "0.2"
