fix: Add default user creation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ regex = "1.5"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+sha2 = "0.9"
 slotmap = "1.0"
 spidev = "0.4"
 sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-rustls"] }
@@ -53,7 +54,7 @@ toml = "0.5"
 tracing = "0.1"
 tracing-error = "0.1"
 tracing-subscriber = "0.2"
-uuid = { version = "0.8", features = ["serde", "v5"] }
+uuid = { version = "0.8", features = ["serde", "v4", "v5"] }
 validator = { version = "0.14", features = ["derive"] }
 
 [build-dependencies]
