--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,7 @@ structopt = { version = "0.3", features = ["paw"] }
 strum = "0.21"
 strum_macros = "0.21"
 thiserror = "1.0"
-tokio = { version = "1.8", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
+tokio = { version = "1.8", features = ["macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
 tokio-util = { version = "0.6", features = ["codec"] }
 toml = "0.5"
 tracing = "0.1"
