--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,10 +46,7 @@ jobs:
 
       - name: Prepare release
         run: |
-          mkdir -p release/hyperion.rs/bin
-          cp target/${{ matrix.target }}/release/hyperiond release/hyperion.rs/bin/hyperiond-rs
-          cd release
-          tar cJvf hyperion.rs-${{ matrix.target }}.tar.xz hyperion.rs
+          ./ci/prepare-release.sh ${{ matrix.target }}
 
       - name: Upload to GitHub release
         uses: svenstaro/upload-release-action@v2
