--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ byteorder = "1.4"
 bytes = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 color-eyre = "0.5"
+cookie = "0.15"
 dirs = "3.0"
 flatbuffers = "2.0"
 futures = "0.3"
@@ -49,6 +50,7 @@ strum = "0.21"
 strum_macros = "0.21"
 thiserror = "1.0"
 tokio = { version = "1.8", features = ["macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
+tokio-stream = { version = "0.1", features = ["net"] }
 tokio-util = { version = "0.6", features = ["codec"] }
 toml = "0.5"
 tracing = "0.1"
@@ -56,6 +58,7 @@ tracing-error = "0.1"
 tracing-subscriber = "0.2"
 uuid = { version = "0.8", features = ["serde", "v4", "v5"] }
 validator = { version = "0.14", features = ["derive"] }
+warp = "0.3"
 
 [build-dependencies]
 prost-build = "0.7"
