refactor(config): Refactor module

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ bytes = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 color-eyre = "0.5"
 cookie = "0.15"
+derive_more = "0.99"
 dirs = "3.0"
 flatbuffers = "2.0"
 futures = "0.3"
