feat(effects): Implement basic effect support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ color-eyre = "0.5"
 cookie = "0.15"
 derive_more = "0.99"
 dirs = "3.0"
+drop_bomb = "0.1"
 flatbuffers = "2.0"
 futures = "0.3"
 futures-io = "0.3"
@@ -39,6 +40,8 @@ parse-display = "0.5"
 paw = "1.0"
 pnet = "0.28"
 prost = "0.7"
+pyo3 = "0.14"
+pythonize = "0.14"
 regex = "1.5"
 serde = "1.0"
 serde_derive = "1.0"
