--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,9 @@ on:
   push:
     tags: ['v*']
 
+env:
+  ENABLE_PYO3: 1
+
 jobs:
   release:
     strategy:
@@ -15,8 +18,10 @@ jobs:
         include:
           - target: x86_64-unknown-linux-gnu
             cross: ""
+            image: "vtavernier/cross:x86_64-bullseye"
           - target: arm-unknown-linux-gnueabihf
             cross: arm-linux-gnueabihf-
+            image: "vtavernier/cross:raspberrypi"
 
     runs-on: ubuntu-20.04
 
@@ -42,7 +47,7 @@ jobs:
           args: --release --target=${{ matrix.target }}
 
       - name: Strip resulting binary
-        run: docker run -v ${{ github.workspace }}:/src rustembedded/cross:${{ matrix.target }} ${{ matrix.cross }}strip /src/target/${{ matrix.target }}/release/hyperiond
+        run: docker run -v ${{ github.workspace }}:/src ${{ matrix.image }} ${{ matrix.cross }}strip /src/target/${{ matrix.target }}/release/hyperiond
 
       - name: Prepare release
         run: |
