--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 name: build
 
-on: push
+on: [push, pull_request]
 
 env:
   ENABLE_PYO3: 1
@@ -67,6 +67,7 @@ jobs:
   release-nightly:
     needs: build
     runs-on: ubuntu-latest
+    if: "github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v')"
     steps:
       - uses: actions/download-artifact@v2
         with:
@@ -80,7 +81,7 @@ jobs:
           title: "Development Build"
           files: |
             release/**/*
-        if: "!startsWith(github.ref, 'refs/tags/v')"
+        if: "github.ref == 'refs/heads/master'"
 
       - uses: marvinpinto/action-automatic-releases@latest
         with:
