--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ regex = "1.5"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+serde_with = "1.12.0"
 sha2 = "0.9"
 slotmap = "1.0"
 spidev = "0.4"
