ci: install protoc

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,13 @@
 name: build
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+      - renovate/**
+    tags:
+      - '**'
+  pull_request:
 
 env:
   ENABLE_PYO3: 1
@@ -17,6 +24,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true
+
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v2
 
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
@@ -75,6 +85,10 @@ jobs:
         with:
           submodules: true
 
+      - name: Install Protoc
+        id: protoc
+        uses: arduino/setup-protoc@v2
+
       - uses: actions/cache@v3
         with:
           path: |
@@ -90,6 +104,12 @@ jobs:
         with:
           target: ${{ matrix.target }}
           profile: minimal
+
+      - name: Move protoc
+        run: |
+          PROTOC=$GITHUB_WORKSPACE/protoc
+          cp ${{ steps.protoc.outputs.path }}/bin/protoc $PROTOC
+          echo "PROTOC=./protoc" >> $GITHUB_ENV
 
       - name: Build project
         uses: actions-rs/cargo@v1
