--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v4
 
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v2
+
       - uses: actions/cache@v3
         with:
           path: |
