ci: fix workflow permissions

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,6 +9,9 @@ jobs:
   build-docs:
     runs-on: ubuntu-22.04
 
+    permissions:
+      contents: write
+
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
