--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -137,6 +137,11 @@ jobs:
     runs-on: ubuntu-latest
     if: "github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v')"
 
+    permissions:
+      contents: read
+      issues: write
+      pull-requests: write
+
     steps:
       - uses: actions/download-artifact@v4
         with:
