--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -138,7 +138,7 @@ jobs:
     if: "github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v')"
 
     permissions:
-      contents: read
+      contents: write
       issues: write
       pull-requests: write
 
